# azure-architecture-categoriser

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  Dockerfile  GITHUB_PAGES_CHECKLIST.md  GITHUB_PAGES_MIGRATION.md  Modernisation_Options_Filtered.csv  README.md  architecture-catalog.json  docker-compose.yml  pyproject.toml  state.md  worklog.md
.streamlit/: config.toml
docs/: _config.yml  architecture-categorization-guide.md  architecture-scorer.md  azure-deployment.md  catalog-builder.md  catalog-comparison.md  configuration.md  drmigrate-integration.md  getting-started.md  github-pages-setup.md  index.md  recommendations-app.md  reviewing-the-catalog.md  securityaudit.md
infra/: main.json
prompt2_context_examples/: 01-java-refactor-aks.json  02-dotnet-replatform-appservice.json  03-legacy-tolerate.json  04-mixed-java-dotnet-partial-appmod.json  05-java-replatform-partial-appmod-missing-compat.json  06-dotnet-conflicting-signals-appmod-overrides.json  07-greenfield-cloud-native-perfect.json  08-enterprise-java-aks-curated.json  09-rehost-vm-lift-shift.json  10-retire-end-of-life.json  11-replace-saas-crm.json  12-retain-hybrid-on-premises.json  13-highly-regulated-healthcare.json  14-multi-region-active-active.json  15-traditional-it-erp.json  16-sre-mission-critical.json  17-cost-minimized-startup.json  18-innovation-first-ai-ml.json  19-appmod-blockers-mainframe.json  20-eliminate-time-category.json  README.txt  _expected_top3_from_catalog.json  dotnet-replatform-appservice.json  java-refactor-aks.json  legacy-tolerate.json
tests/: generate_sample_data.py  (+3 more)
(+176 files in other folders)
