[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-architecture-catalog-builder"
version = "1.0.0"
description = "CLI tools for building and scoring Azure architecture catalogs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Adam Brown" }
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
catalog-builder = "catalog_builder.cli:main"
architecture-scorer = "architecture_scorer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/catalog_builder", "src/architecture_scorer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
